fixed picture alignment

--- a/contact.css
+++ b/contact.css
@@ -42,5 +42,5 @@ a:hover {
 img {
 	position: relative;
 	margin-left: 60px;
-	margin-top: -70px;
+	margin-top: -96px;
 }
